# rust_aws_lambda

./: Cargo.toml  serverless.yml
src/: main.rs
